Removed an incorrect implementation of sliding window technique